--- a/collated/docs/A0138516A.md
+++ b/collated/docs/A0138516A.md
@@ -7,13 +7,13 @@
 * Aspects/tools in charge of: Testing, Git, Deadlines
 * Features implemented:
    * [Find Task](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/docs/UserGuide.md#finding-tasks--find)
-   * [Set Storage Location](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/docs/UserGuide.md#set-storage-file-location-storage)
+   * [Set Storage Location](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/docs/UserGuide.md#set-storage-file-location--storage)
    * [Undo Command](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/docs/UserGuide.md#undo-a-task--undo)
 
 
-* Code written: [[functional code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0138516A.md)][[test code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/test/A0138516A.md)][[docs](A0138516A.md)]
+* Code written: [[functional code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0138516A.md)][[test code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/test/A0138516A.md)][[docs](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/docs/A0138516A.md)]
 * Other major contributions:
-  * [Did the initial refactoring from AddressBook to Tasklist](https://github.com/CS2103AUG2016-F09-C1/main/commit/2a42c3cef6476b9f531918cf6579214cc233dcb2) 
+  * [Did the initial refactoring from AddressBook to Tasklist](https://github.com/CS2103AUG2016-F09-C1/main/commit/2a42c3cef6476b9f531918cf6579214cc233dcb2)
 
 
 -----
@@ -75,7 +75,7 @@ Use case ends.
 
 
 1. User requests to add task
-2. TaskList add the task
+2. TaskList add the task 
 Use case ends.
 
 
@@ -198,7 +198,7 @@ Use case ends.
 1. User requests to list tasks
 2. TaskList shows a list of tasks
 3. User requests to delete a specific task in the list
-4. TaskList deletes the task
+4. TaskList deletes the task 
 Use case ends.
 
 
@@ -280,6 +280,25 @@ Use case ends.
 
 
 > Use case ends
+
+
+### Use case: `Check time remaining for a task`
+
+
+
+
+**MSS**
+
+
+
+
+1. User requests to check the time remaining for specified task
+2. TaskList show the time remaining for that task
+
+
+> Use case ends
+
+
 
 
 
@@ -411,7 +430,7 @@ Use case ends.
 ###### \UserGuide.md
 ``` md
 ### Mark a task : `mark`
-Mark the task as completed at the specified ‘INDEX’.<br>
+You can mark the task as completed at the specified ‘INDEX’.<br>
 Format: `mark INDEX`
 
 
@@ -420,18 +439,18 @@ Format: `mark INDEX`
 > The index **must be a positive integer** 1, 2, 3, ...
 
 
-Examples:
+Examples: 
 * `list`<br>
   `mark 2`<br>
   Marks the 2nd task in the task list.
-* `find CS2103` <br>
+* `find CS2103` <br> 
   `mark 1`<br>
   Marks the 1st task in the results of the `find` command.
 
 
 <br>
 ### Unmark a task : `unmark`
-Unmark the task as not completed at the specified ‘INDEX’.<br>
+You can unmark the task as not completed at the specified ‘INDEX’.<br>
 Format: `unmark INDEX`
 
 
@@ -440,18 +459,18 @@ Format: `unmark INDEX`
 > The index **must be a positive integer** 1, 2, 3, ...
 
 
-Examples:
+Examples: 
 * `list`<br>
   `unmark 2`<br>
   Unmarks the 2nd task in the task list.
-* `find Homework 2` <br>
+* `find Homework 2` <br> 
   `unmark 1`<br>
   Unmarks the 1st task in the results of the `find` command.
 
 
 <br>
 ### Undo a task : `undo`
-Undo the previous command.<br>
+You can undo the previous command if you want.<br>
 Format: `undo`
 
 
@@ -462,24 +481,32 @@ Format: `undo`
 
 
 
-Examples:
+Examples: 
 * `mark 1`<br>
   `undo`<br>
   Undo the previous command, and the first task will be unmark.
-* `add CS2103` <br>
+* `add CS2103` <br> 
   `undo`<br>
   Undo the previous command, added task will be removed.
 
 
 <br>
+```
+###### \UserGuide.md
+``` md
+
+
+<br>
 ### Clearing all entries : `clear`
-Clears all tasks from the task list.<br>
+Have a  fresh start with everything cleared<br>
 Format: `clear`  
 
 
 
 
 > `Note`: Clearing all task will remove all entries in the task list
+> 
+> Irreversible with `undo`
 
 
 <br>
@@ -500,7 +527,7 @@ Format: `exit`
 <br>
 
 **Q**: How do I transfer my data to another Computer?<br>
-**A**: Install the app in the other computer and overwrite the empty data file it creates with
+**A**: Install the app in the other computer and overwrite the empty data file it creates with 
        the file that contains the data of your previous Address Book folder.
 
 
@@ -524,7 +551,7 @@ Format: `exit`
 
 
 
-Examples:
+Examples: 
   * `add CS1020 Tutorial d/many questions e/05102016 1200  t/needhelp`
   * `add Meeting d/for project s/05102016 1200 e/05102016 1400 t/priority1`
   * `add CS1010 Take home lab d/hard to do s/05102016 1200`
@@ -541,7 +568,7 @@ Examples:
 
 
 
-Examples:
+Examples: 
   * `list’<br>
   list all tasks
   * `list completed’<br>
@@ -565,7 +592,7 @@ Examples:
 
 
 
-Examples:
+Examples: 
   * `find cs2103`<br>
   Display tasks containing `CS2103` and `cs2103`
   * `find cs1010 15 2016`<br>
@@ -583,7 +610,7 @@ Examples:
 
 
 
-Examples:
+Examples: 
   * `storage \folder\file.xml` <br>
   Storage file location has been changed to `\folder\file.xml`.
   * `storage \data\newtasklist.xml` <br>
@@ -599,7 +626,7 @@ Examples:
 
 
 
-Examples:
+Examples: 
   * `list`<br>
   `edit 1 d/new updates`<br>
   Edits the 1st task in the task list, changing the task description to `new updates`.
@@ -617,11 +644,11 @@ Examples:
 
 
 
-Examples:
+Examples: 
   *  `list`<br>
   `delete 2`<br>
   Deletes the 2nd task in the task list.
-  * `find cs2103`<br>
+  * `find cs2103`<br> 
   `delete 1`<br>
   Deletes the 1st task in the results of the `find` command.
 
@@ -635,11 +662,11 @@ Examples:
 
 
 
-Examples:
+Examples: 
   * `list`<br>
   `select 2`<br>
   Selects the 2nd task in the task list.
-  * `find CS2103` <br>
+  * `find CS2103` <br> 
   `select 1`<br>
   Selects the 1st task in the results of the `find` command.
 
@@ -653,11 +680,11 @@ Examples:
 
 
 
-Examples:
+Examples: 
   * `list`<br>
   `mark 2`<br>
   Marks the 2nd task in the task list.
-  * `find CS2103` <br>
+  * `find CS2103` <br> 
   `mark 1`<br>
   Marks the 1st task in the results of the `find` command.
 
@@ -671,11 +698,11 @@ Examples:
 
 
 
-Examples:
+Examples: 
   * `list`<br>
   `unmark 2`<br>
   Unmarks the 2nd task in the task list.
-  * `find Homework 2` <br>
+  * `find Homework 2` <br> 
   `unmark 1`<br>
   Unmarks the 1st task in the results of the `find` command.
 
@@ -687,18 +714,21 @@ Examples:
 
 
 
-Examples:
+Examples: 
 * `mark 1`<br>
   `undo`<br>
   Undo the previous command, and the first task will be unmark.
-* `add CS2103` <br>
+* `add CS2103` <br> 
   `undo`<br>
   Undo the previous command, added task will be removed.
 
 
-
-
 <br>
+```
+###### \UserGuide.md
+``` md
+
+
 **Clear** : `clear`
 
 
@@ -706,4 +736,7 @@ Examples:
 
 <br>
 **Exit** : `exit`
+`
+
+
 ```
