--- a/collated/docs/A0140019W.md
+++ b/collated/docs/A0140019W.md
@@ -6,11 +6,11 @@
 * Components in charge of: [UI](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/docs/DeveloperGuide.md#ui-component)
 * Aspects/tools in charge of: Testing, Git, Documentation, Scheduling
 * Features implemented:
-   * [Add Task](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/docs/UserGuide.md#adding-a-task-add)
+   * [Add Task](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/docs/UserGuide.md#adding-a-task--add)
    * [Select Task](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/docs/UserGuide.md#select-a-task--select)
-* Code written: [[functional code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0140019W.md)][[test code](A0140019W.md)][[docs](A0140019W.md)]
+* Code written: [[functional code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0140019W.md)][[test code](A0140019W.md)][[docs](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/docs/A0140019W.md)]
 * Other major contributions:
-  * [Did the initial refactoring from AddressBook to Tasklist](https://github.com/CS2103AUG2016-F09-C1/main/commit/2a42c3cef6476b9f531918cf6579214cc233dcb2) 
+  * [Did the initial refactoring from AddressBook to Tasklist](https://github.com/CS2103AUG2016-F09-C1/main/commit/2a42c3cef6476b9f531918cf6579214cc233dcb2)
 
 
 -----
@@ -68,7 +68,7 @@ interface and exposes its functionality using the `LogicManager.java` class.<br>
 
 
 
-#### Events-Driven nature of the design
+#### Events-Driven nature of the design 
 
 
 
@@ -85,7 +85,7 @@ command `delete 1`.
 
 The diagram below shows how the `EventsCenter` reacts to that event, which eventually results in the updates
 being saved to the hard disk and the status bar of the UI being updated to reflect the 'Last Updated' time. <br>
-<img src="images\SDforDeleteTaskEventHandling.PNG" width="800">
+<img src="images\SDforDeleteTaskEventHandling.png" width="800">
 
 
 
@@ -209,6 +209,16 @@ Classes used by multiple components are in the `seedu.tasklist.commons` package.
 
 
 
+### Object Oriented Domain Model
+
+
+
+
+<img src="images/oodm.png" width="800"><br>
+
+
+
+
 ```
 ###### \UserGuide.md
 ``` md
@@ -217,7 +227,7 @@ Classes used by multiple components are in the `seedu.tasklist.commons` package.
 > * Words in `UPPER_CASE` are the parameters.
 > * Items in `SQUARE_BRACKETS` are optional.
 > * Items with `...` after them can have multiple instances.
-> * Order of parameters are fixed.
+> * Order of parameters are fixed. 
 
 
 <br>
@@ -228,17 +238,17 @@ Format: `help`
 
 
 > Help is also shown if you press <kbd>F1</kbd>
-
+ 
 <br>
 ### Adding a task : `add`
-Adds a task to the task list<br>
+If you want to add the a task to the TaskList, here are the format to follow<br>
 Format: `add TITLE [d/DETAILS] [s/START DATE TIME] [e/END DATE TIME] [t/TAG]...`
 
 
 > Title, details and tags are alphanumeric. Date and time are numeric.
 >
 > Date and time is in 24hr format : `DDMMYY HHMM`
->
+> 
 > Tasks can have any number of tags (including 0)
 >
 > Floating tasks can be added without any date and time
@@ -246,17 +256,17 @@ Format: `add TITLE [d/DETAILS] [s/START DATE TIME] [e/END DATE TIME] [t/TAG]...`
 
 
 
-Examples:
+Examples: 
 * `add CS1020 Tutorial d/many questions e/05102016 1200  t/needhelp`
 * `add Meeting d/for project s/05102016 1200 e/05102016 1400 t/priority1`
 * `add CS1010 Take home lab d/hard to do s/05102016 1200`
 * `add CS2103 Project d/hard to do`
 * `add CS1231 Mid-Term Test`
-
-
 <br>
+
+
 ### Listing tasks : `list`
-Lists the stipulated tasks in the task list <br>
+This command help you to lists the stipulated tasks in the task list <br>
 Format: `list [PARAMETERS]`
 
 
@@ -282,7 +292,7 @@ list all tasks for the week
 
 <br>
 ### Finding tasks : `find`
-Finds tasks whose title, description, date, time and tags contain any of the given keywords.<br>
+If you want to find tasks whose title, description, date, time and tags contain any of the information you want to search for.<br>
 Format: `find KEYWORD [MORE_KEYWORDS]`
 
 
@@ -293,7 +303,7 @@ Format: `find KEYWORD [MORE_KEYWORDS]`
 
 
 
-Examples:
+Examples: 
 * `find cs2103`<br>
   Display tasks containing `CS2103` and `cs2103`
 * `find cs1010 15 2016`<br>
@@ -304,22 +314,22 @@ Examples:
 
 <br>
 ### Set storage file location : `storage`
-Changing the storage file location. <br>
+Saving the TaskList to anywhere you want. <br>
 Format: `storage FILEPATH`
 
 
 
 
 > Task list data are saved in a file called `data\tasklist.xml` in the root folder by default.
->
+> 
 > The file name must end in `.xml` for it to be acceptable to the program.
 >
 > `Note`: The previous storage file will be deleted.
+> 
+> Irreversible with `undo`
 
 
-
-
-Example:
+Example: 
 * `storage \folder\file.xml` <br>
   Storage file location has been changed to `\folder\file.xml`.
 * `storage \data\newtasklist.xml` <br>
@@ -328,7 +338,7 @@ Example:
 
 <br>
 ### Edit a task : `edit`
-Edit the task’s information from the task list <br>
+Edit any information you want to edit from the task <br>
 Format: `edit INDEX [TITLE] [d/DETAILS] [s/STARTTIME] [e/ENDTIME]`
 
 
@@ -352,24 +362,24 @@ Examples:
 
 <br>
 ### Deleting a task : `delete`
-Deletes the specified task from the task list. <br>
+Delete any task if you is not needed or not important<br>
 Format: `delete INDEX`
 
 
 
 
-> Deletes the task at the specified `INDEX`.
+> Deletes the task at the specified `INDEX`. 
 > The index refers to the index number shown in the most recent listing.
 > The index **must be a positive integer** 1, 2, 3, ...
 
 
 
 
-Examples:
+Examples: 
 * `list`<br>
   `delete 2`<br>
   Deletes the 2nd task in the task list.
-* `find cs2103`<br>
+* `find cs2103`<br> 
   `delete 1`<br>
   Deletes the 1st task in the results of the `find` command.
 
@@ -389,11 +399,11 @@ Format: `select INDEX`
 
 
 
-Examples:
+Examples: 
 * `list`<br>
   `select 2`<br>
   Selects the 2nd task in the task list.
-* `find CS2103` <br>
+* `find CS2103` <br> 
   `select 1`<br>
   Selects the 1st task in the results of the `find` command.
 
