--- a/collated/docs/A0146840E.md
+++ b/collated/docs/A0146840E.md
@@ -30,7 +30,8 @@ We are a team based in the School of Computing, National University of Singapore
    * [List Tasks](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/docs/UserGuide.md#listing-tasks--list)
    * [Mark Task](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/docs/UserGuide.md#mark-a-task--mark)
    * [Unmark Task](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/docs/UserGuide.md#unmark-a-task--unmark)
-* Code written: [[functional code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0146840E.md)][[test code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/test/A0146840E.md)][[docs](A0146840E.md)]
+   * [Edit Task](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/docs/UserGuide.md#edit-a-task--edit)
+* Code written: [[functional code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0146840E.md)][[test code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/test/A0146840E.md)][[docs](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/docs/A0146840E.md)]
 * Other major contributions:
   * [Did the final refactoring from AddressBook to Tasklist](https://github.com/CS2103AUG2016-F09-C1/main/commit/863473fd47913a06ebd1408a391e8eb04c2d868c)
   * Set up Travis, Coveralls and Codacy
@@ -69,7 +70,8 @@ Priority | As a ... | I want to ... | So that I can...
 `* * *`| user | display the number of tasks completed or left | keep track of my progress
 `* * *`| user | mark the task as done | know which tasks are completed
 `* * * `| user | clear all the task | start a totally new task list
-`* * * `| user | exit the application | close the application
+`* * * `| user | exit the application | close the application 
+` * *`| user | know how much time do I have before a deadline | don't need to calculate manually how much do I have left
 `* * `| new user | set my username | regard the app as my own
 `* * `| user | hide private tasks by default | minimize chance of someone else seeing them by accident
 `* * `| user | change the command words | make it more intuitive
@@ -87,13 +89,13 @@ Priority | As a ... | I want to ... | So that I can...
 
 
 
-# User Guide
+# Survival Guide
 <br>
 
 
 
 
-* [Starting the program](#starting-the-program)
+* [Getting Started](#starting-the-program)
 * [Introduction](#introduction)
    * [Tasklist](#tasklist)
    * [Task Card Indicator](#task-card-indicator)
@@ -114,10 +116,13 @@ Priority | As a ... | I want to ... | So that I can...
    * [Mark](#mark-a-task--mark)
    * [Unmark](#unmark-a-task--unmark)
    * [Undo](#undo-a-task--undo)
+   * [Time](#check-the-time-remaining--time)
    * [Clear](#clearing-all-entries--clear)
    * [Exit](#exiting-the-program--exit)
 * [FAQ](#faq)
 * [Command Summary](#command-summary)
+
+
 
 
 
@@ -129,12 +134,12 @@ Priority | As a ... | I want to ... | So that I can...
 
 
 0. Ensure that you have installed Java version `1.8.0_60` or later on your computer.<br>
-> This program will not work with earlier versions of java including java 8.
+> This program will not work with earlier versions of java including java 8. 
 
 
 
 
-1. Download the latest version of `Task.List.jar` from the releases tab.
+1. Download the latest version of `Over-Do-It.jar` from the releases tab.
 
 
 
@@ -146,8 +151,6 @@ Priority | As a ... | I want to ... | So that I can...
 
 3. Double click the file to start the application. The application should run and GUI should appear shortly.<br><br>
 <img src="images/Ui.png">
-
-
 
 
 4. Type the command in the command box at the top and press <kbd>Enter</kbd> to execute the command.<br>
@@ -184,8 +187,6 @@ After startup, the application will always show overdue tasks, if any, and tasks
 
 
 Interactive tasklist (left panel) and Overall tasklist (right panel) are sorted in chronological order starting from the earliest date.
-
-
 
 
 Sorted in order:
