--- a/collated/docs/A0153837X.md
+++ b/collated/docs/A0153837X.md
@@ -6,8 +6,13 @@
 * Components in charge of: [Model](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/docs/DeveloperGuide.md#model-component)
 * Aspects/tools in charge of: Git, Code Quality
 * Features implemented:
-   * [Today Command (unused)](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0153837X-unused.md)
-* Code written: [[functional code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0153837X-unused.md)][[test code](A0153837X.md)][[docs](A0153837X.md)]
+   * [Time Command] (https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0153837X.md)
+   * [Today Command (unused)](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0153837Xunused.md)
+* Code written: [[functional code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0153837X.md)][[test code](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0153837X.md)][[docs](https://github.com/CS2103AUG2016-F09-C1/main/blob/master/collated/main/A0153837X.md)]
+
+
+
+
 ```
 ###### \DeveloperGuide.md
 ``` md
@@ -63,4 +68,47 @@
         * Mini calendar widget
     * Weaknesses:
         * Some users face integration error between devices.
+
+
+
+
+```
+###### \UserGuide.md
+``` md
+### Check the time remaining : `time`
+Gives the time remaining for a task (in days and hours) at the specified ‘INDEX’.<br>
+Format: `time INDEX`
+ 
+ 
+ > Gives the time remaining to the deadline/ event <br>
+ > The index refers to the index number shown in the most recent listing.<br>
+ > The index **must be a positive integer** 1, 2, 3, ...
+ 
+ 
+ Examples:
+ * `list`<br>
+   `time 1`<br>
+   16 day(s), 5 hour(s) left.
+ * `list` <br>
+   `time 2`<br>
+   Task is overdue!
+
+
+```
+###### \UserGuide.md
+``` md
+**Time** : `time`
+ <br>
+
+
+
+
+ Examples:
+ * `list`<br>
+   `time 1`<br>
+   16 day(s), 5 hour(s) left.
+ * `list` <br>
+   `time 2`<br>
+   Task is overdue!
+ <br>
 ```
