--- a/collated/main/A0138516A.md
+++ b/collated/main/A0138516A.md
@@ -21,7 +21,7 @@ public class ChangePathEvent extends BaseEvent{
 ```
 ###### \java\seedu\tasklist\commons\util\FileUtil.java
 ``` java
-    /**To delete the file from the previous file location**/
+    /**Delete the file from the previous file location**/
     public static void deletePreviousFile(String filepath) throws IOException{
     	File deleteFile = new File(filepath);
     	deleteFile.delete();   	
@@ -40,13 +40,12 @@ public class ChangePathEvent extends BaseEvent{
     @Override
     public CommandResult undo() {
     	assert model != null;
-    	try{
+    	try {
     		model.deleteTask(toAdd);
-    	}catch(TaskNotFoundException e){
-    		System.out.println("There is no such task");
+    	}catch (TaskNotFoundException e) {
+    		return new CommandResult("There is no such task");
     	}
     	return new CommandResult(MESSAGE_UNDO + COMMAND_WORD + " " + toAdd);
-    	
     }
 ```
 ###### \java\seedu\tasklist\logic\commands\CommandHistory.java
@@ -105,8 +104,7 @@ public abstract class CommandUndoExtension extends Command {
 		try {
 			model.unDoDelete(targetIndex, undoTask);
 		} catch (TaskNotFoundException e) {
-			System.out.println("There is no such task");
-
+			return new CommandResult("There is no such task");
 		}
 		return new CommandResult(MESSAGE_UNDO + COMMAND_WORD + " " + undoTask);
 	}
@@ -114,11 +112,11 @@ public abstract class CommandUndoExtension extends Command {
 ###### \java\seedu\tasklist\logic\commands\EditCommand.java
 ``` java
     @Override
-    public CommandResult undo(){
-    	try{
-    	model.unDoEdit(beforeEdit,afterEdit);
-    	}catch(TaskNotFoundException e){
-    		System.out.println("There is no such task");
+    public CommandResult undo() {
+    	try {
+    		model.unDoEdit(beforeEdit,afterEdit);
+    	} catch (TaskNotFoundException e) {
+    		return new CommandResult("There is no such task");
     	}
 		return new CommandResult(MESSAGE_UNDO + COMMAND_WORD + " " + afterEdit);
     }
@@ -129,13 +127,14 @@ public abstract class CommandUndoExtension extends Command {
 	public CommandResult undo() {
     	try{
     		model.unmarkTask(taskToMark);
-    	}catch (TaskNotFoundException pnfe) {
+    	} catch (TaskNotFoundException pnfe) {
             assert false : "The target task cannot be missing";
         } catch (TaskCompletionException e) {
             return new CommandResult("Task already un Mark");
         }
-    	return new CommandResult(MESSAGE_UNDO+COMMAND_WORD+" "+taskToMark);
+    	return new CommandResult(MESSAGE_UNDO + COMMAND_WORD + " " + taskToMark);
 	}
+    
 ```
 ###### \java\seedu\tasklist\logic\commands\StorageCommand.java
 ``` java
@@ -151,8 +150,8 @@ public class StorageCommand extends Command {
 
 	public static final String MESSAGE_USAGE = COMMAND_WORD + ": Change the storage file location.\n"
 			+ "Parameters: FILEPATH\n" + "Example: \n" 
-			+ COMMAND_WORD + " \\data\\tasklist.xml\n"
-			+ COMMAND_WORD + " \\storagefile.xml";
+			+ COMMAND_WORD + " ./data/tasklist.xml\n"
+			+ COMMAND_WORD + " ./storagefile.xml";
 	public static final String MESSAGE_CHANGE_PATH_SUCCESS = "Storage file location has been updated to ";
 	public static final String MESSAGE_FILE_PATH_NOT_EXIST = "Requested storage file location does not exist!";
 
@@ -162,7 +161,7 @@ public class StorageCommand extends Command {
 	public StorageCommand(String filepath) {
 		this.filepath = filepath;
 	}
-	
+		
 	  /**
      * Convenience constructor using raw values.
      *
@@ -173,13 +172,12 @@ public class StorageCommand extends Command {
 		File file = new File(filepath);
 		if (!file.isDirectory() && !filepath.contains(".xml")) {
 			return new CommandResult(MESSAGE_FILE_PATH_NOT_EXIST);
-		}
-				
+		}	
 		EventsCenter.getInstance().post(new ChangePathEvent(filepath));
 		model.updateTaskListAfterFilePathChange();
 		return new CommandResult(MESSAGE_CHANGE_PATH_SUCCESS + filepath);
 	}
-	
+
 	 /**
      * Parses arguments in the context of the storage command.
      *
@@ -246,13 +244,14 @@ public class UndoCommand extends Command {
            } catch (TaskCompletionException e) {
                return new CommandResult("Task already Marked");
            }
-       	return new CommandResult(MESSAGE_UNDO+COMMAND_WORD+" "+taskToUnmark);
+       	return new CommandResult(MESSAGE_UNDO + COMMAND_WORD + " " + taskToUnmark);
    	}
+    
 ```
 ###### \java\seedu\tasklist\MainApp.java
 ``` java
     @Subscribe
-    public void ChangePathRequestEvent(ChangePathEvent event){
+    public void changePathRequestEvent(ChangePathEvent event){
     	 logger.info(LogsCenter.getEventHandlingLogMessage(event));
     	 String previousFilePath = config.getTaskListFilePath();
     	 config.setTaskListFilePath(event.toString());
@@ -286,8 +285,7 @@ public class UndoCommand extends Command {
 ``` java
     /** Replace the edited task to original task**/
 	void unDoEdit(Task beforeEdit, Task afterEdit) throws TaskNotFoundException;
-    
-}
+	
 ```
 ###### \java\seedu\tasklist\model\ModelManager.java
 ``` java
@@ -295,7 +293,7 @@ public class UndoCommand extends Command {
     public void updateTaskListAfterFilePathChange() {
     	indicateTaskListChanged();
     }
-    
+
 ```
 ###### \java\seedu\tasklist\model\ModelManager.java
 ``` java
@@ -314,10 +312,8 @@ public class UndoCommand extends Command {
     	taskList.replace(beforeEdit, afterEdit);
     	updateFilteredTaskListToShowAll();
         indicateTaskListChanged();
-    	
     }
     
-    //=========== Filtered Task List Accessors ===============================================================
 ```
 ###### \java\seedu\tasklist\model\task\UniqueTaskList.java
 ``` java
@@ -372,6 +368,6 @@ public class UndoCommand extends Command {
     /**To update new file path on the UI**/
     @Subscribe
     public void handleUpdatedFilePathEvent(ChangePathEvent event) {
-    	setSaveLocation("./"+event.toString());
+    	setSaveLocation(event.toString());
     }
 ```
