--- a/collated/main/A0140019W.md
+++ b/collated/main/A0140019W.md
@@ -139,8 +139,7 @@ public class Date {
     public int hashCode() {
         return localDate.hashCode();
     }
-
-}
+    
 ```
 ###### \java\seedu\tasklist\model\task\DateTime.java
 ``` java
@@ -221,11 +220,10 @@ public class Description {
      */
     public Description(String description) throws IllegalValueException {
         assert description != null;
-        description = description.trim();
-        if (!isValidDescription(description)) {
+        if (!isValidDescription(description.trim())) {
             throw new IllegalValueException(MESSAGE_DESCRIPTION_CONSTRAINTS);
         }
-        this.description = description;
+        this.description = description.trim();
     }
 
     /**
@@ -282,6 +280,7 @@ public class Task implements ReadOnlyTask {
 
     /**
      * Every field must be present and not null.
+     * 
      * @throws IllegalValueException 
      */
     public Task(Title title, DateTime startDateTime, Description description, DateTime endDateTime, UniqueTagList tags) throws IllegalValueException {
@@ -315,8 +314,8 @@ public class Task implements ReadOnlyTask {
         this.isOverdue = isOverdue;
         this.isFloating = isFloating;
         
-        initializeOverdue();
-        initializeFloating();
+//        initializeOverdue();
+//        initializeFloating();
     }
 
     /**
@@ -398,8 +397,7 @@ public class Task implements ReadOnlyTask {
     public String toString() {
         return getAsText();
     }
-
-}
+    
 ```
 ###### \java\seedu\tasklist\model\task\Time.java
 ``` java
@@ -467,7 +465,6 @@ public class Time {
         return localTime.hashCode();
     }
     
-}
 ```
 ###### \java\seedu\tasklist\model\task\Title.java
 ``` java
@@ -489,11 +486,10 @@ public class Title {
      */
     public Title(String title) throws IllegalValueException {
         assert title != null;
-        title = title.trim();
-        if (!isValidTitle(title)) {
+        if (!isValidTitle(title.trim())) {
             throw new IllegalValueException(MESSAGE_TITLE_CONSTRAINTS);
         }
-        this.fullTitle = title;
+        this.fullTitle = title.trim();
     }
 
     /**
