--- a/collated/main/A0146840E.md
+++ b/collated/main/A0146840E.md
@@ -1,8 +1,69 @@
 # A0146840E
+###### \java\seedu\tasklist\logic\commands\AddCommand.java
+``` java
+    /**
+     * Parses arguments in the context of the add task command.
+     *
+     * @param args full command args string
+     * @return the prepared command
+     */
+    @Override
+    public Command prepare(String args) {
+        final Matcher matcher = TASK_DATA_ARGS_FORMAT.matcher(args.trim());
+        
+        // Validate arg string format
+        if (!matcher.matches()) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, MESSAGE_USAGE));
+        }
+        
+        try {
+            return new AddCommand(
+                    matcher.group("title"),
+                    getDetailsFromArgs(matcher.group("startDateTime")),
+                    getDetailsFromArgs(matcher.group("description")),
+                    getDetailsFromArgs(matcher.group("endDateTime")),
+                    getTagsFromArgs(matcher.group("tagArguments"))
+            );
+        } catch (IllegalValueException ive) {
+            return new IncorrectCommand(ive.getMessage());
+        }
+    }
+
+}
+```
+###### \java\seedu\tasklist\logic\commands\ClearCommand.java
+``` java
+    @Override
+    public Command prepare(String args) {
+        return new ClearCommand();
+    }
+}
+```
+###### \java\seedu\tasklist\logic\commands\DeleteCommand.java
+``` java
+	/**
+	 * Parses arguments in the context of the delete task command.
+	 *
+	 * @param args
+	 *            full command args string
+	 * @return the prepared command
+	 */
+	@Override
+	public Command prepare(String args) {
+		Optional<Integer> index = parseIndex(args);
+		if (!index.isPresent()) {
+			return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, MESSAGE_USAGE));
+		}
+
+		return new DeleteCommand(index.get());
+	}
+
+}
+```
 ###### \java\seedu\tasklist\logic\commands\EditCommand.java
 ``` java
 /**
- * Edits a task identified using it's last displayed index from the task list.
+ * Edit a task in the task list.
  */
 public class EditCommand extends CommandUndoExtension {
     public static final String COMMAND_WORD = "edit";
@@ -23,6 +84,11 @@ public class EditCommand extends CommandUndoExtension {
 
     public EditCommand() {};
     
+    /**
+     * Edit a task identified using it's last displayed index from the task list.
+     * 
+     * @throws IllegalValueException if input contains invalid format
+     */
     public EditCommand(int targetIndex, String title, String startDateTime, String description, String endDateTime,
             Set<String> tags) throws IllegalValueException {
         this.targetIndex = targetIndex;
@@ -65,18 +131,20 @@ public class EditCommand extends CommandUndoExtension {
 ###### \java\seedu\tasklist\logic\commands\EditCommand.java
 ``` java
     /**
-     * Combine the new editions with its original task
+     * Combines the new editions with its original task
+     * 
      * @param taskToEdit containing the parameters to change
      * @return new edited task
      * @throws IllegalValueException if input contains invalid format
      */
     private Task editTask(ReadOnlyTask taskToEdit) throws IllegalValueException {
         return new Task(editTitle(taskToEdit), editStartDateTime(taskToEdit), editDescription(taskToEdit),
-                editEndDateTime(taskToEdit), editTags(taskToEdit));
+                        editEndDateTime(taskToEdit), editTags(taskToEdit));
     }
     
     /**
      * Retrieve a Title by replacing the original Title with the new Title, if any.
+     * 
      * @param taskToEdit containing the parameters to change
      * @return Title with the edited Title
      */
@@ -86,6 +154,7 @@ public class EditCommand extends CommandUndoExtension {
     
     /**
      * Retrieve a Description by replacing the original Description with the new Description, if any.
+     * 
      * @param taskToEdit containing the parameters to change
      * @return Description with the edited Description
      */
@@ -95,6 +164,7 @@ public class EditCommand extends CommandUndoExtension {
     
     /**
      * Retrieve a DateTime by replacing the original DateTime with the new DateTime, if any.
+     * 
      * @param taskToEdit containing the parameters to change
      * @return DateTime with the edited DateTime 
      * @throws IllegalValueException if invalid DateTime format
@@ -108,6 +178,7 @@ public class EditCommand extends CommandUndoExtension {
     
     /**
      * Retrieve a DateTime by replacing the original DateTime with the new DateTime, if any.
+     * 
      * @param taskToEdit containing the parameters to change
      * @return DateTime with the edited DateTime 
      * @throws IllegalValueException if invalid DateTime format
@@ -121,6 +192,7 @@ public class EditCommand extends CommandUndoExtension {
     
     /**
      * Retrieve a UniqueTagList by replacing the original Tags with the new Tags, if any.
+     * 
      * @param taskToEdit containing the parameters to change
      * @return UniqueTagList containing the edited Tags
      */
@@ -146,7 +218,7 @@ public class EditCommand extends CommandUndoExtension {
         // Validate arg index
         Optional<Integer> index = parseIndex(matcher.group("targetIndex"));
         
-        if(!index.isPresent()){
+        if (!index.isPresent()) {
             return new IncorrectCommand(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, MESSAGE_USAGE));
         }
         
@@ -166,10 +238,64 @@ public class EditCommand extends CommandUndoExtension {
 
 }
 ```
+###### \java\seedu\tasklist\logic\commands\FindCommand.java
+``` java
+    /**
+     * Parses arguments in the context of the find task command.
+     *
+     * @param args full command args string
+     * @return the prepared command
+     */
+    @Override
+    public Command prepare(String args) {
+        final Matcher matcher = KEYWORDS_ARGS_FORMAT.matcher(args.trim());
+        if (!matcher.matches()) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT,
+                    MESSAGE_USAGE));
+        }
+
+        // keywords delimited by whitespace
+        final String[] keywords = matcher.group("keywords").split("\\s+");
+        final Set<String> keywordSet = new HashSet<>(Arrays.asList(keywords));
+        return new FindCommand(keywordSet);
+    }
+
+}
+```
+###### \java\seedu\tasklist\logic\commands\HelpCommand.java
+``` java
+    /**
+     * Parses arguments in the context of the help command.
+     *
+     * @param args should be empty
+     * @return the prepared command
+     */
+    @Override
+    public Command prepare(String args) {
+        return new HelpCommand();
+    }
+}
+```
+###### \java\seedu\tasklist\logic\commands\IncorrectCommand.java
+``` java
+    /**
+     * Parses arguments in the context of the incorrect command.
+     *
+     * @param args full command args string
+     * @return the prepared command
+     */
+    @Override
+    public Command prepare(String args) {
+        return new IncorrectCommand(args);
+    }
+
+}
+
+```
 ###### \java\seedu\tasklist\logic\commands\ListCommand.java
 ``` java
 /**
- * Lists tasks in the task list to the user.
+ * List tasks
  */
 public class ListCommand extends Command {
 
@@ -190,11 +316,10 @@ public class ListCommand extends Command {
 
     private ListCommand.List type;
 
-    public ListCommand() {
-    }
+    public ListCommand() {}
 
     /**
-     * List Command Constructor
+     * Lists tasks in the task list to the user.
      * 
      * @param args
      *            containing the requested parameter
@@ -203,26 +328,32 @@ public class ListCommand extends Command {
      */
     public ListCommand(String args) throws IllegalValueException {
         switch (args.trim()) {
-        case "":
-            type = ListCommand.List.ALL;
-            break;
-        case "completed":
-            type = ListCommand.List.COMPLETED_TASKS;
-            break;
-        case "overdue":
-            type = ListCommand.List.OVERDUE_TASKS;
-            break;
-        case "floating":
-            type = ListCommand.List.FLOATING_TASKS;
-            break;
-        case "today":
-            type = ListCommand.List.TODAY_TASKS;
-            break;
-        case "week":
-            type = ListCommand.List.WEEK_TASKS;
-            break;
-        default:
-            throw new IllegalValueException("");
+            case "" :
+                type = ListCommand.List.ALL;
+                break;
+                
+            case "completed" :
+                type = ListCommand.List.COMPLETED_TASKS;
+                break;
+                
+            case "overdue":
+                type = ListCommand.List.OVERDUE_TASKS;
+                break;
+                
+            case "floating":
+                type = ListCommand.List.FLOATING_TASKS;
+                break;
+                
+            case "today" :
+                type = ListCommand.List.TODAY_TASKS;
+                break;
+                
+            case "week" :
+                type = ListCommand.List.WEEK_TASKS;
+                break;
+                
+            default :
+                throw new IllegalValueException("");
         }
     }
 
@@ -230,35 +361,35 @@ public class ListCommand extends Command {
     public CommandResult execute() {
         int filteredListSize;
         switch (type) {
-            case ALL:
+            case ALL :
                 model.updateFilteredTaskListToShowAll();
                 return new CommandResult(String.format(MESSAGE_SUCCESS, ""));
             
-            case COMPLETED_TASKS:
+            case COMPLETED_TASKS :
                 model.updateFilteredTaskList("isCompleted");
                 return new CommandResult(String.format(MESSAGE_SUCCESS, "completed "));
             
-            case OVERDUE_TASKS:
+            case OVERDUE_TASKS :
                 model.updateFilteredTaskList("isOverdue");
                 return new CommandResult(String.format(MESSAGE_SUCCESS, "overdue "));
             
-            case FLOATING_TASKS:
+            case FLOATING_TASKS :
                 model.updateFilteredTaskList("isFloating");
                 return new CommandResult(String.format(MESSAGE_SUCCESS, "floating "));
             
-            case TODAY_TASKS:
+            case TODAY_TASKS :
                 filteredListSize = model.updateFilteredTaskList("today");
                 if (filteredListSize > 0) {
                     return new CommandResult(String.format(MESSAGE_SUCCESS_2, "today"));
-                }else {
+                } else {
                     return new CommandResult(MESSAGE_NO_TASK_TODAY);
                 }
             
-            case WEEK_TASKS:
+            case WEEK_TASKS :
                 filteredListSize = model.updateFilteredTaskList("week");
                 if (filteredListSize > 0) {
                     return new CommandResult(String.format(MESSAGE_SUCCESS_2, "the week"));
-                }else {
+                } else {
                     return new CommandResult(MESSAGE_NO_TASK_WEEK);
                 }
             
@@ -287,7 +418,7 @@ public class ListCommand extends Command {
 ###### \java\seedu\tasklist\logic\commands\MarkCommand.java
 ``` java
 /**
- * Marks a task identified using it's last displayed index from the task list.
+ * Mark a task
  */
 public class MarkCommand extends CommandUndoExtension {
     
@@ -306,6 +437,9 @@ public class MarkCommand extends CommandUndoExtension {
     
     public MarkCommand() {};
     
+    /**
+     * Marks a task identified using it's last displayed index from the task list.
+     */
     public MarkCommand(int targetIndex) {
         this.targetIndex = targetIndex;
     }
@@ -335,10 +469,51 @@ public class MarkCommand extends CommandUndoExtension {
     }
     
 ```
+###### \java\seedu\tasklist\logic\commands\MarkCommand.java
+``` java
+    /**
+     * Parses arguments in the context of the mark task command.
+     *
+     * @param args full command args string
+     * @return the prepared command
+     */
+    @Override
+    public Command prepare(String args) {
+        Optional<Integer> index = parseIndex(args);
+        if(!index.isPresent()){
+            return new IncorrectCommand(
+                    String.format(MESSAGE_INVALID_COMMAND_FORMAT, MESSAGE_USAGE));
+        }
+
+        return new MarkCommand(index.get());
+    }   
+}
+```
+###### \java\seedu\tasklist\logic\commands\SelectCommand.java
+``` java
+    /**
+     * Parses arguments in the context of the select task command.
+     *
+     * @param args full command args string
+     * @return the prepared command
+     */
+    @Override
+    public Command prepare(String args) {
+        Optional<Integer> index = parseIndex(args);
+        if(!index.isPresent()){
+            return new IncorrectCommand(
+                    String.format(MESSAGE_INVALID_COMMAND_FORMAT, MESSAGE_USAGE));
+        }
+
+        return new SelectCommand(index.get());
+    }
+
+}
+```
 ###### \java\seedu\tasklist\logic\commands\UnmarkCommand.java
 ``` java
 /**
- * Unmarks a task identified using it's last displayed index from the task list.
+ * Unmark a task
  */
 public class UnmarkCommand extends CommandUndoExtension {
     
@@ -357,6 +532,9 @@ public class UnmarkCommand extends CommandUndoExtension {
     
     public UnmarkCommand() {};
     
+    /**
+     * Unmarks a task identified using it's last displayed index from the task list.
+     */
     public UnmarkCommand(int targetIndex) {
         this.targetIndex = targetIndex;
     }
@@ -385,6 +563,27 @@ public class UnmarkCommand extends CommandUndoExtension {
         return new CommandResult(String.format(MESSAGE_UNMARK_TASK_SUCCESS, taskToUnmark));
     }
     
+```
+###### \java\seedu\tasklist\logic\commands\UnmarkCommand.java
+``` java
+    /**
+     * Parses arguments in the context of the unmark task command.
+     *
+     * @param args full command args string
+     * @return the prepared command
+     */
+    @Override
+    public Command prepare(String args) {
+        Optional<Integer> index = parseIndex(args);
+        if(!index.isPresent()){
+            return new IncorrectCommand(
+                    String.format(MESSAGE_INVALID_COMMAND_FORMAT, UnmarkCommand.MESSAGE_USAGE));
+        }
+
+        return new UnmarkCommand(index.get());
+    }
+    
+}
 ```
 ###### \java\seedu\tasklist\logic\Logic.java
 ``` java
@@ -416,14 +615,7 @@ public class UnmarkCommand extends CommandUndoExtension {
  * Parser interface for interaction with the Command classes.
  */
 public interface CommandParser {
-    
-    /**
-     * Parses arguments in the context of the requested task command.
-     * @param args full command args string
-     * @return the prepared command
-     */
-    public Command prepare(String args);
-    
+
     /**
      * Used for initial separation of command word and args.
      */
@@ -434,24 +626,34 @@ public interface CommandParser {
     final Pattern KEYWORDS_ARGS_FORMAT =
             Pattern.compile("(?<keywords>\\S+(?:\\s+\\S+)*)"); // one or more keywords separated by whitespace
 
-    final Pattern TASK_DATA_ARGS_FORMAT = // '/' forward slashes are reserved for delimiter prefixes
+    // '/' forward slashes are reserved for delimiter prefixes
+    final Pattern TASK_DATA_ARGS_FORMAT = 
             Pattern.compile("(?<title>[^/]+)"
                     + "(?<isDescriptionPrivate>p?)(?<description>(?: d/[^/]+)*)"
                     + "(?<isStartDateTimePrivate>p?)(?<startDateTime>(?: s/[^/]+)*)"
                     + "(?<isEndDateTimePrivate>p?)(?<endDateTime>(?: e/[^/]+)*)"
                     + "(?<tagArguments>(?: t/[^/]+)*)"); // variable number of tags
     
-    final Pattern EDIT_TASK_DATA_ARGS_FORMAT = // '/' forward slashes are reserved for delimiter prefixes
+    // '/' forward slashes are reserved for delimiter prefixes
+    final Pattern EDIT_TASK_DATA_ARGS_FORMAT = 
             Pattern.compile("(?<targetIndex>[^/\\s]+)"
                     + "(?<title>(?: [^/]+)*)"
                     + "(?<isDescriptionPrivate>p?)(?<description>(?: d/[^/]+)*)"
                     + "(?<isStartDateTimePrivate>p?)(?<startDateTime>(?: s/[^/]+)*)"
                     + "(?<isEndDateTimePrivate>p?)(?<endDateTime>(?: e/[^/]+)*)"
                     + "(?<tagArguments>(?: t/[^/]+)*)"); // variable number of tags
-        
+    
+    /**
+     * Parses arguments in the context of the requested task command.
+     * 
+     * @param args full command args string
+     * @return the prepared command
+     */
+    public Command prepare(String args);
+    
     /**
      * Returns the specified index in the {@code command} IF a positive unsigned integer is given as the index.
-     *   Returns an {@code Optional.empty()} otherwise.
+     * Returns an {@code Optional.empty()} otherwise.
      */
     default Optional<Integer> parseIndex(String command) {
         final Matcher matcher = TASK_INDEX_ARGS_FORMAT.matcher(command.trim());
@@ -613,9 +815,9 @@ public class Parser {
             if (status.contains("isCompleted")) {
                 return task.isCompleted();
             } else if (status.contains("isOverdue")) {
-                return task.isOverdue();
+                return task.isOverdue() && !task.isCompleted();
             } else if (status.contains("isFloating")) {
-                return task.isFloating();
+                return task.isFloating() && !task.isCompleted();
             } else if (status.contains("today")) {
                 return task.isOverdue() && !task.isCompleted() || !task.isCompleted() && task.getEndDateTime().isDateEqualCurrentDate() || task.isFloating();
             } else if (status.contains("week")) {
@@ -634,57 +836,111 @@ public class Parser {
 ```
 ###### \java\seedu\tasklist\model\task\DateTime.java
 ``` java
+    /**
+     * Check if this date time is after the compared DateTime.
+     */
     @Override
     public boolean isDateTimeAfter(DateTime dateTime) {
-        return (!isDateEmpty() && !dateTime.isDateEmpty()                                                   // isDateAfter
-                    && getDate().getLocalDate().isAfter(dateTime.getDate().getLocalDate()))
-                
-                || (!isDateEmpty() && !isTimeEmpty() && !dateTime.isDateEmpty() && !dateTime.isTimeEmpty()  // isDateEqualAndTimeAfter
-                    && getDate().getLocalDate().isEqual(dateTime.getDate().getLocalDate())
-                    && (getTime().getLocalTime().equals(dateTime.getTime().getLocalTime())
-                            || getTime().getLocalTime().isAfter(dateTime.getTime().getLocalTime())))
-                
-                || (isDateEmpty() && !isTimeEmpty() && dateTime.isDateEmpty() && !dateTime.isTimeEmpty()    // isNoDateAndTimeAfter
-                        && getTime().getLocalTime().isAfter(dateTime.getTime().getLocalTime()));
+        return isDateAfter(dateTime) || isDateEqualAndTimeAfter(dateTime) || isNoDateAndTimeAfter(dateTime);
     }
 
+    /**
+     * Check if this date is after the compared DateTime's date.
+     */
+    private boolean isDateAfter(DateTime dateTime) {
+        return !isDateEmpty() && !dateTime.isDateEmpty() && getDate().getLocalDate().isAfter(dateTime.getDate().getLocalDate());
+    }
+    
+    /**
+     * Check if both dates are equal and the compared DateTime's time is after this object's time
+     */
+    private boolean isDateEqualAndTimeAfter(DateTime dateTime) {
+        return !isDateEmpty() && !isTimeEmpty() && !dateTime.isDateEmpty() && !dateTime.isTimeEmpty()
+                && getDate().getLocalDate().isEqual(dateTime.getDate().getLocalDate())
+                && (getTime().getLocalTime().equals(dateTime.getTime().getLocalTime())
+                || getTime().getLocalTime().isAfter(dateTime.getTime().getLocalTime()));
+    }
+    
+    /**
+     * Check if both dates are empty and the compared DateTime's time is after this object's time
+     */
+    private boolean isNoDateAndTimeAfter(DateTime dateTime) {
+        return isDateEmpty() && !isTimeEmpty() 
+                && dateTime.isDateEmpty() && !dateTime.isTimeEmpty()
+                && getTime().getLocalTime().isAfter(dateTime.getTime().getLocalTime());
+    }
+
+    /**
+     * Check if this date time is before current local date time.
+     */
     @Override
     public boolean isDateTimeAfterCurrentDateTime() {                
-        return (!isDateEmpty() && getDate().getLocalDate().isBefore(LocalDate.now()))                           // isDateAfter
-                
-                 || (!isDateEmpty() && !isTimeEmpty() && getDate().getLocalDate().isEqual(LocalDate.now())      // isDateEqualAndTimeAfter 
-                    && getTime().getLocalTime().isBefore(LocalTime.now()))
-                
-                 || (isDateEmpty() && !isTimeEmpty() && getTime().getLocalTime().isBefore(LocalTime.now()));    // isNoDateAndTimeAfter
+        return isDateAfterCurrentDate() || isDateEqualAndTimeAfterCurrentTime() || isNoDateAndTimeAfterCurrentTime();
     }
 
+    /**
+     * Check if this date is after the current local date
+     */
+    private boolean isDateAfterCurrentDate() {
+        return !isDateEmpty() && getDate().getLocalDate().isBefore(LocalDate.now());
+    }
+   
+    /**
+     * Check if this date is equal to current local date and this time is after the current local time
+     */
+    private boolean isDateEqualAndTimeAfterCurrentTime() {
+        return !isDateEmpty() && !isTimeEmpty() && getDate().getLocalDate().isEqual(LocalDate.now()) 
+                && getTime().getLocalTime().isBefore(LocalTime.now());
+    }
+    
+    /**
+     * Check if this date is empty and this time is not empty and this time is after the current local time
+     */
+    private boolean isNoDateAndTimeAfterCurrentTime() {
+        return isDateEmpty() && !isTimeEmpty() && getTime().getLocalTime().isBefore(LocalTime.now());
+    }
+
+    /**
+     * Check if date is equal to current local date.
+     */
     @Override
     public boolean isDateEqualCurrentDate() {
         return !isDateEmpty() && getDate().getLocalDate().isEqual(LocalDate.now());
     }
     
+    /**
+     * Check if date is equal to one week from current local date.
+     */
     @Override
     public boolean isDateEqualCurrentDateTillUpcomingWeek() {
         return !isDateEmpty() && getDate().getLocalDate().isAfter(LocalDate.now().minusDays(1))
                 && getDate().getLocalDate().isBefore(LocalDate.now().plusWeeks(1));
     }
     
+    /**
+     * Check if date and time is empty.
+     */
     @Override
     public boolean isDateTimeEmpty() {
         return getDate().getLocalDate() == null && getTime().getLocalTime() == null;
     }
 
+    /**
+     * Check if date is empty.
+     */
     @Override
     public boolean isDateEmpty() {
         return getDate().getLocalDate() == null;
     }
 
+    /**
+     * Check if time is empty.
+     */
     @Override
     public boolean isTimeEmpty() {
         return getTime().getLocalTime() == null;
     }
 
-}
 ```
 ###### \java\seedu\tasklist\model\task\DateTimeComparator.java
 ``` java
@@ -714,7 +970,7 @@ public interface DateTimeComparator {
     public boolean isDateEqualCurrentDateTillUpcomingWeek();
 
     /**
-     * Check if date or time is empty.
+     * Check if date and time is empty.
      */
     public boolean isDateTimeEmpty();
     
@@ -764,6 +1020,7 @@ public interface DateTimeComparator {
 ``` java
     /**
      * Check whether startDateTime is before endDateTime
+     * 
      * @throws IllegalValueException if startDateTime is before endDateTime
      */
     private void validateDateTime(DateTime startDateTime, DateTime endDateTime) throws IllegalValueException {
@@ -904,6 +1161,7 @@ public interface DateTimeComparator {
      * Edits a task in the task list.
      * Also checks the new task's tags and updates {@link #tags} with any new tags found,
      * and updates the Tag objects in the task to point to those in {@link #tags}.
+     * 
      * @throws TaskNotFoundException if task does not exist.
      */
     public void editTask(Task taskToEdit, ReadOnlyTask key) throws TaskNotFoundException {
@@ -911,6 +1169,11 @@ public interface DateTimeComparator {
         task.edit(taskToEdit, key);
     }
 
+    /**
+     * Mark a task in the task list.
+     * 
+     * @throws TaskNotFoundException if task does not exist.
+     */
     public boolean markTask(ReadOnlyTask key) throws UniqueTaskList.TaskNotFoundException, TaskCompletionException {
         if (task.mark(key)) {
             return true;
@@ -919,6 +1182,11 @@ public interface DateTimeComparator {
         }
     }
     
+    /**
+     * Unmark a task in the task list.
+     * 
+     * @throws TaskNotFoundException if task does not exist.
+     */
     public boolean unmarkTask(ReadOnlyTask key) throws UniqueTaskList.TaskNotFoundException, TaskCompletionException {
         if (task.unmark(key)) {
             return true;
@@ -1068,7 +1336,7 @@ public class XmlAdaptedTask {
         });
     }
 
-    void fillInnerParts() {      
+    public void fillInnerParts() {      
         mainTaskListPanel = TaskListPanel.load(primaryStage, mainTaskListPanelPlaceholder, logic.getMainFilteredTaskList(), TaskListPanel.Type.MAIN_TASKLIST);
         filteredTaskListPanel = TaskListPanel.load(primaryStage, getTaskListPlaceholder(), logic.getFilteredTaskList(), TaskListPanel.Type.FILTERED_TASKLIST);
         resultDisplay = ResultDisplay.load(primaryStage, getResultDisplayPlaceholder());
@@ -1248,30 +1516,55 @@ public class XmlAdaptedTask {
 ```
 ###### \java\seedu\tasklist\ui\TaskListPanel.java
 ``` java
+    public void scrollTo(int index) {
+        taskListView.scrollTo(index);
+    }
+
     public void scrollToPrevious() {
-        Platform.runLater(() -> {
-            if (scrollIndex > 0) scrollTo(--scrollIndex);
-        });
+        if (scrollIndex > 0) {
+            scrollTo(--scrollIndex);
+        }
     }
 
     public void scrollToNext() {
-        Platform.runLater(() -> {
-            if (scrollIndex < 10) scrollTo(++scrollIndex);
-        });
+        if (scrollIndex < taskListSize - 1) {
+            scrollTo(++scrollIndex);
+        }
     }
     
     public void scrollToLast() {
-        Platform.runLater(() -> {
-            scrollIndex = 10;
-            scrollTo(scrollIndex);
-        });
+        scrollIndex = taskListSize - 1;
+        scrollTo(scrollIndex);
     }
     
     public void scrollToFirst() {
-        Platform.runLater(() -> {
-            scrollIndex = 0;
-            scrollTo(scrollIndex);
-        });
+        scrollIndex = 0;
+        scrollTo(scrollIndex);
+    }
+
+    class TaskListViewCell extends ListCell<ReadOnlyTask> {
+
+        public TaskListViewCell() {
+        }
+
+        @Override
+        protected void updateItem(ReadOnlyTask task, boolean empty) {
+            super.updateItem(task, empty);
+
+            if (empty || task == null ) {
+                setGraphic(null);
+                setText(null);
+            } else if (type == TaskListPanel.Type.FILTERED_TASKLIST){
+                setGraphic(TaskCard.load(task, getIndex() + 1).getLayout());
+            } else if (type == TaskListPanel.Type.MAIN_TASKLIST){
+                if (task.isCompleted()) {
+                    setGraphic(null);
+                    setText(null);
+                } else {
+                    setGraphic(TaskCard.load(task, -1).getLayout());
+                }
+            }
+        }
     }
 
 ```
