--- a/collated/main/A0153837X.md
+++ b/collated/main/A0153837X.md
@@ -1,6 +1,5 @@
 # A0153837X
-
-###### /src/main/java/seedu/tasklist/logic/commands/TimeCommand.java
+###### \java\seedu\tasklist\logic\commands\TimeCommand.java
 ``` java
 public class TimeCommand extends Command{
 	
@@ -54,7 +53,7 @@ public class TimeCommand extends Command{
 
 }
 ```
-###### /src/main/java/seedu/tasklist/model/ModelManager.java
+###### \java\seedu\tasklist\model\ModelManager.java
 ``` java
     @Override
     public String timeTask (Task target) {
@@ -62,7 +61,7 @@ public class TimeCommand extends Command{
     }
     
 ```
-###### /src/main/java/seedu/tasklist/model/task/Date.java
+###### \java\seedu\tasklist\model\task\Date.java
 ``` java
     public String daysFromNow(){
     	// Calculate how many days in between
@@ -72,7 +71,7 @@ public class TimeCommand extends Command{
     
 }
 ```
-###### /src/main/java/seedu/tasklist/model/task/DateTime.java
+###### \java\seedu\tasklist\model\task\DateTime.java
 ``` java
     public String timeLeft() {
     	String hour= null;
@@ -101,7 +100,7 @@ public class TimeCommand extends Command{
     }
 }
 ```
-###### /src/main/java/seedu/tasklist/model/task/Task.java
+###### \java\seedu\tasklist\model\task\Task.java
 ``` java
     public String timeTask(){
     	return (this.getEndDateTime().timeLeft());
@@ -109,7 +108,7 @@ public class TimeCommand extends Command{
 
 }
 ```
-###### /src/main/java/seedu/tasklist/model/task/Time.java
+###### \java\seedu\tasklist\model\task\Time.java
 ``` java
     public String hoursFromNow(){
     	long hours = ChronoUnit.HOURS.between(LocalTime.now(), localTime);
@@ -117,25 +116,5 @@ public class TimeCommand extends Command{
     	return Long.toString(hours);
     
     }
-}
-```
-###### /src/test/java/guitests/TimeCommandTest.java
-``` java
-public class TimeCommandTest extends TaskListGuiTest{
-	
-	@Test
-    public void time(){
-	    commandBox.runCommand("list");
-	    
-		//Overdue Task
-		commandBox.runCommand("time 1");
-        assertResultMessage("Task is overdue!");
-		
-        //Task with no endDate
-        commandBox.runCommand("add meeting");
-		commandBox.runCommand("time 8");
-        assertResultMessage("Task has no date time specification!");
-        
-	}
 }
 ```
