--- a/collated/test/A0138516A.md
+++ b/collated/test/A0138516A.md
@@ -4,43 +4,31 @@
 public class StorageCommandTest extends TaskListGuiTest {
 
 	private String testStorageCommandFilePath = "src/test/data/StorageCommandTestFolder/testTaskList.xml";
+	private String defaultConfigFile = "TestConfig.json";
 	private String testFileName = "testTaskList.xml";
-	private final String COMMAND_WORD = "storage ";
-	private String defaultFilePath = "src/test/data/sandbox/tempTaskList.xml";
-	private String defaultConfigFile = "src/test/data/ConfigUtilTest/TestConfig.json";
-	
 
-	private Config config;
-	private Storage storage;
-	
-	/*@Before
-	 public void setup(){
-		config.setTaskListFilePath(defaultFilePath);
-		try {
-			ConfigUtil.saveConfig(config, defaultConfigFile);
-		} catch (IOException e) {
-			e.printStackTrace();
-		}
-		 storage.setTaskListFilePath(defaultFilePath);
+	private Config Config = assertFilePathChange(defaultConfigFile);
+
+	@Test
+	// Change File Path
+	public void storage_changePath() {
+		commandBox.runCommand("check 1 ");
+		commandBox.runCommand("storage " + testStorageCommandFilePath);
+		assertTrue(getPath(testStorageCommandFilePath).equals(testFileName));
 	}
-*/
-	/*// Change File path
+
 	@Test
-	public void ChangeFilePath() {
-
-		assertFilePathChange(COMMAND_WORD + testStorageCommandFilePath, getPath(testStorageCommandFilePath));
-	}*/
-
 	// Invalid Command
-	@Test
-	public void invalidStorageCommand() {
+	public void storage_UnknownCommand() {
+		commandBox.runCommand("check 1 ");
 		commandBox.runCommand("storages docs/");
 		assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
 	}
 
-	// Invalid file Path
 	@Test
-	public void invalidFilePath() {
+	// Invalid file Path
+	public void storage_InvalidPath() {
+		commandBox.runCommand("check 1 ");
 		commandBox.runCommand("storage doc");
 		assertResultMessage(StorageCommand.MESSAGE_FILE_PATH_NOT_EXIST);
 	}
@@ -51,9 +39,99 @@ public class StorageCommandTest extends TaskListGuiTest {
 		return fileName;
 	}
 
-	private void assertFilePathChange(String filepath, String fileName) {
-		commandBox.runCommand(filepath);
-		assertTrue(fileName.equals(testFileName));
+	private Config assertFilePathChange(String filepath) {
+		Config initialTestConfig;
+		String configFilepathUsed = defaultConfigFile;
+
+		if (filepath != null) {
+			configFilepathUsed = filepath;
+		}
+
+		try {
+			Optional<Config> configOptional = ConfigUtil.readConfig(configFilepathUsed);
+			initialTestConfig = configOptional.orElse(new Config());
+		} catch (DataConversionException e) {
+			initialTestConfig = new Config();
+		}
+
+		// Save config file
+		try {
+			ConfigUtil.saveConfig(initialTestConfig, configFilepathUsed);
+		} catch (IOException e) {
+		}
+		return initialTestConfig;
+	}
+
+}
+```
+###### \java\guitests\UndoCommandTest.java
+``` java
+public class UndoCommandTest extends TaskListGuiTest {
+
+	@Test
+	public void undo_addTask() {
+		TestTask[] currentList = td.getTypicalTasks();
+		commandBox.runCommand("list");
+
+		// add one task
+		TestTask taskToAdd = TypicalTestTasks.task10;
+		commandBox.runCommand(taskToAdd.getAddCommand());
+		TestUtil.addTasksToList(currentList, taskToAdd);
+		commandBox.runCommand("undo");
+		assertTrue(taskListPanel.isListMatching(currentList));
+	}
+
+	@Test
+	public void undo_deleteTask() {
+		TestTask[] currentList = td.getTypicalTasks();
+		commandBox.runCommand("list");
+		// add one task
+		TestTask taskToAdd = TypicalTestTasks.task10;
+		commandBox.runCommand(taskToAdd.getAddCommand());
+		currentList = TestUtil.addTasksToList(currentList, taskToAdd);
+		commandBox.runCommand("delete " + currentList.length);
+		commandBox.runCommand("undo");
+		assertTrue(taskListPanel.isListMatching(currentList));
+	}
+
+	@Test
+	public void undo_editTask() {
+		TestTask[] currentList = td.getTypicalTasks();
+		commandBox.runCommand("list");
+		// add one task
+		TestTask taskToAdd = TypicalTestTasks.task10;
+		commandBox.runCommand(taskToAdd.getAddCommand());
+		currentList = TestUtil.addTasksToList(currentList, taskToAdd);
+		Title beforeEditTitle = currentList[currentList.length - 1].getTitle();
+		commandBox.runCommand("edit " + currentList.length + " Order 2 pizza");
+		Title afterEditTitle = currentList[currentList.length - 1].getTitle();
+		assertTrue(beforeEditTitle.equals(afterEditTitle));
+	}
+
+	@Test
+	public void undo_markAndUnmark() {
+		// Test for mark command
+		TestTask[] currentList = td.getTypicalTasks();
+		TestTask beforeMarkTitle = currentList[0];
+		commandBox.runCommand("list");
+		commandBox.runCommand("mark " + 1);
+		beforeMarkTitle.setCompleted(true);
+		commandBox.runCommand("undo");
+		beforeMarkTitle.setCompleted(false);
+		TaskCardHandle afterMark = taskListPanel.navigateToTask(currentList[0].getTitle().fullTitle);
+		assertUnmarked(beforeMarkTitle, afterMark);
+
+		// Test for unmark command
+		commandBox.runCommand("list");
+		commandBox.runCommand("mark " + currentList.length);
+		beforeMarkTitle.setCompleted(true);
+		TestTask beforeUnMarkTitle = currentList[currentList.length-1];
+		commandBox.runCommand("unmark " + currentList.length);
+		beforeUnMarkTitle.setCompleted(false);
+		commandBox.runCommand("undo");
+		currentList[currentList.length-1].setCompleted(true);
+		TaskCardHandle afterUnMark = taskListPanel.navigateToTask(currentList[currentList.length-1].getTitle().fullTitle);
+		assertMarked(beforeUnMarkTitle, afterUnMark);
 	}
 }
 ```
