--- a/collated/test/A0146840E.md
+++ b/collated/test/A0146840E.md
@@ -2,8 +2,9 @@
 ###### \java\guitests\EditCommandTest.java
 ``` java
 public class EditCommandTest extends TaskListGuiTest {
+
     @Test
-    public void edit() {
+    public void editTask_nonEmptyList_successResultMessage() {
         TestTask[] currentList = td.getTypicalTasks();
         commandBox.runCommand("list");
         
@@ -22,9 +23,16 @@ public class EditCommandTest extends TaskListGuiTest {
         assertEditEndTimeSuccess(6, "1234", currentList[5]);
         
         //edit everything
-        assertEditSuccess(7, "title", "description", "11012014 1100", "11012014 1200", currentList[6]);
+        assertEditSuccess(7, "title", "description", "11012014 1100", "11012014 1200", currentList[6]); 
+    }
 
-        //invalid date time entry
+    @Test
+    public void editTask_nonEmptyList_invalidDateTimeResultMessage() {
+        TestTask[] currentList = td.getTypicalTasks();
+        commandBox.runCommand("list");
+        
+        assertEditSuccess(7, "title", "description", "11012014 1100", "11012014 1200", currentList[6]);
+        
         commandBox.runCommand("edit 1 s/01019999");
         assertResultMessage(Messages.MESSAGE_INVALID_DATE_TIME_ENTRY);
         commandBox.runCommand("edit 1 e/01010000");
@@ -49,20 +57,23 @@ public class EditCommandTest extends TaskListGuiTest {
         assertResultMessage(Messages.MESSAGE_INVALID_DATE_TIME_ENTRY);
         commandBox.runCommand("edit 7 e/10012014 0000");
         assertResultMessage(Messages.MESSAGE_INVALID_DATE_TIME_ENTRY);
-        
-        //edit to empty list
+    }
+    
+    @Test
+    public void editTask_nonEmptyList_invalidCommandResultMessage() {
+        commandBox.runCommand("edits 1");
+        assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
+        commandBox.runCommand("edit index");
+        assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, EditCommand.MESSAGE_USAGE));
+    }
+    
+    @Test
+    public void editTask_emptyList() {
         commandBox.runCommand("clear");
         commandBox.runCommand("edit 1 CS2103");
         assertResultMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
         commandBox.runCommand("edit 10 CS2103");
         assertResultMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
-
-        //invalid command
-        commandBox.runCommand("edits 1");
-        assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
-        commandBox.runCommand("edit index");
-        assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, EditCommand.MESSAGE_USAGE));
-        
     }
 
     private void assertEditTitleSuccess(int index, String title, TestTask taskToEdit) {
@@ -160,14 +171,57 @@ public class EditCommandTest extends TaskListGuiTest {
     }
 }
 ```
+###### \java\guitests\guihandles\MainMenuHandle.java
+``` java
+    public void toggleFullScreenUsingMenu() {
+        clickOn("File", "FullScreen");
+        guiRobot.sleep(500);
+    }
+    
+    public void toggleFullScreen() {
+        useF11Accelerator();
+    }
+    
+    public boolean isFullScreen() {
+        return primaryStage.isFullScreen();
+    }
+    
+    private void useF11Accelerator() {
+        guiRobot.push(KeyCode.F11);
+        guiRobot.sleep(500);
+    }
+    
+    public void selectPreviousCommandUsingMenu() {
+        clickOn("Navigate", "Commands", "Show Previous Command");
+        guiRobot.sleep(500);
+    }
+    
+    public void pressUpKey() {
+        useUpAccelerator();
+    }
+    
+    private void useUpAccelerator() {
+        guiRobot.push(KeyCode.UP);
+        guiRobot.sleep(500);
+    }
+    
+    public void pressDownKey() {
+        useDownAccelerator();
+    }
+    
+    private void useDownAccelerator() {
+        guiRobot.push(KeyCode.DOWN);
+        guiRobot.sleep(500);
+    }
+    
+}
+```
 ###### \java\guitests\ListCommandTest.java
 ``` java
 public class ListCommandTest extends TaskListGuiTest {
 
     @Test
-    public void list() {
-        
-        //list
+    public void listTasks_nonEmptyList_successResultMessage() {
         commandBox.runCommand("list");
         assertResultMessage(String.format(ListCommand.MESSAGE_SUCCESS, ""));
         
@@ -193,17 +247,10 @@ public class ListCommandTest extends TaskListGuiTest {
         commandBox.runCommand("list week");
         assertResultMessage(String.format(ListCommand.MESSAGE_SUCCESS_2, "the week"));
         assertListSize(2);
-        
-        //list empty list
-        commandBox.runCommand("clear");
-        
-        commandBox.runCommand("list today");
-        assertResultMessage(ListCommand.MESSAGE_NO_TASK_TODAY);
-        
-        commandBox.runCommand("list week");
-        assertResultMessage(ListCommand.MESSAGE_NO_TASK_WEEK);
-        
-        //invalid command
+    }
+    
+    @Test
+    public void listTasks_nonEmptyList_invalidCommandResultMessage() {
         commandBox.runCommand("lists");
         assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
         commandBox.runCommand("lists 0");
@@ -212,6 +259,72 @@ public class ListCommandTest extends TaskListGuiTest {
         assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, ListCommand.MESSAGE_USAGE));
     }
     
+    @Test
+    public void listTasks_emptyList() {
+        commandBox.runCommand("clear");
+        
+        commandBox.runCommand("list today");
+        assertResultMessage(ListCommand.MESSAGE_NO_TASK_TODAY);
+        
+        commandBox.runCommand("list week");
+        assertResultMessage(ListCommand.MESSAGE_NO_TASK_WEEK);
+    }
+    
+}
+```
+###### \java\guitests\MainWindowTest.java
+``` java
+public class MainWindowTest extends TaskListGuiTest {
+       
+    @Test
+    public void mainMenu_usingF11HotKey_maximizedWindow() {
+        mainMenu.toggleFullScreen();
+        assertTrue(mainMenu.isFullScreen());
+    }
+    
+    @Test
+    public void mainMenu_usingF11HotKey_minimizedWindow() {
+        mainMenu.toggleFullScreen();
+        mainMenu.toggleFullScreen();
+        assertFalse(mainMenu.isFullScreen());
+    }
+    
+    @Test
+    public void mainMenu_usingMenu_maximizedWindow() {       
+        mainMenu.toggleFullScreenUsingMenu();
+        assertTrue(mainMenu.isFullScreen());
+    }
+    
+    @Test
+    public void mainMenu_usingMenu_minimizedWindow() {       
+        mainMenu.toggleFullScreenUsingMenu();
+        mainMenu.toggleFullScreenUsingMenu();
+        assertFalse(mainMenu.isFullScreen());
+    }
+    
+    @Test
+    public void mainWindow_usingUpHotKey_displayPreviousCommand() {
+        commandBox.runCommand(TypicalTestTasks.task9.getAddCommand());
+        mainMenu.pressUpKey();
+        assertTrue(commandBox.getCommandInput().equals(TypicalTestTasks.task9.getAddCommand()));
+    }
+        
+    @Test
+    public void mainWindow_usingDownHotKey_displayPreviousCommand() {
+        commandBox.runCommand(TypicalTestTasks.task8.getAddCommand());
+        commandBox.runCommand(TypicalTestTasks.task9.getAddCommand());
+        mainMenu.pressUpKey();
+        mainMenu.pressDownKey();
+        assertTrue(commandBox.getCommandInput().equals(TypicalTestTasks.task8.getAddCommand()));
+    }
+    
+    @Test
+    public void mainWindow_usingMenu_displayPreviousCommand() {
+        commandBox.runCommand(TypicalTestTasks.task9.getAddCommand());
+        mainMenu.selectPreviousCommandUsingMenu();
+        assertTrue(commandBox.getCommandInput().equals(TypicalTestTasks.task9.getAddCommand()));
+    }
+
 }
 ```
 ###### \java\guitests\MarkCommandTest.java
@@ -219,40 +332,54 @@ public class ListCommandTest extends TaskListGuiTest {
 public class MarkCommandTest extends TaskListGuiTest {
 
     @Test
-    public void mark() {
+    public void markTask_nonEmptyList_successResultMessage() {
         TestTask[] currentList = td.getTypicalTasks();
         commandBox.runCommand("list");
         
-        //mark first task
-        assertMarkSuccess(1, currentList[0]);
+        assertMarkSuccess(1, currentList[0], currentList);
+        assertMarkSuccess(1, currentList[1], currentList);     
+    }
+
+    @Test
+    public void markTask_nonEmptyList_invalidTaskIndexResultMessage() {
+        TestTask[] currentList = td.getTypicalTasks();
+        commandBox.runCommand("list");
         
-        //mark next task
-        assertMarkSuccess(1, currentList[1]);
-        
-        //mark task that don't exist
-        commandBox.runCommand("mark -10");
-        assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, MarkCommand.MESSAGE_USAGE));
-        commandBox.runCommand("mark -1");
-        assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, MarkCommand.MESSAGE_USAGE));
         commandBox.runCommand("mark " + (currentList.length + 1));
         assertResultMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
         commandBox.runCommand("mark " + (currentList.length + 10));
         assertResultMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
+    }
+
+    @Test
+    public void markTask_nonEmptyList_markedTaskResultMessage() {
+        TestTask[] currentList = td.getTypicalTasks();
+        commandBox.runCommand("list");
         
-        //mark duplicate task
         commandBox.runCommand("mark " + (currentList.length - 1));
+        commandBox.runCommand("mark " + (currentList.length));
         assertResultMessage(MarkCommand.MESSAGE_MARKED_TASK);
-        commandBox.runCommand("mark " + currentList.length);
-        assertResultMessage(MarkCommand.MESSAGE_MARKED_TASK);
-        
-        //invalid command
+    }
+
+    @Test
+    public void markTask_nonEmptyList_invalidCommandResultMessage() {
+        commandBox.runCommand("mark -10");
+        assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, MarkCommand.MESSAGE_USAGE));
+        commandBox.runCommand("mark -1");
+        assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, MarkCommand.MESSAGE_USAGE));
         commandBox.runCommand("marks 1");
         assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
         commandBox.runCommand("mark index");
         assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, MarkCommand.MESSAGE_USAGE));
     }
 
-    private void assertMarkSuccess(int index, TestTask taskToMark) {
+    @Test
+    public void markTask_emptyList_invalidTaskIndexResultMessage() {
+        commandBox.runCommand("mark 1");
+        assertResultMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
+    }
+    
+    private void assertMarkSuccess(int index, TestTask taskToMark, TestTask... currentList) {
         commandBox.runCommand("mark " + index);
         taskToMark.setCompleted(true);
         
@@ -268,44 +395,57 @@ public class MarkCommandTest extends TaskListGuiTest {
 public class UnmarkCommandTest extends TaskListGuiTest {
 
     @Test
-    public void unmark() {
+    public void unmarkTask_nonEmptyList_successResultMessage() {
+        TestTask[] currentList = td.getTypicalTasks();
+        commandBox.runCommand("list");
+        commandBox.runCommand("mark " + 1);
+        commandBox.runCommand("mark " + 1);
+        
+        assertUnmarkSuccess(currentList.length, currentList[0], currentList);
+        assertUnmarkSuccess(currentList.length, currentList[1], currentList);
+    }
+
+    @Test
+    public void unmarkTask_nonEmptyList_invalidTaskIndexResultMessage() {
         TestTask[] currentList = td.getTypicalTasks();
         commandBox.runCommand("list");
         
-        //mark tasks
-        commandBox.runCommand("mark " + 1);
-        commandBox.runCommand("mark " + 1);
-        
-        //unmark first task
-        assertUnmarkSuccess(currentList.length, currentList[0]);
-        
-        //unmark next task
-        assertUnmarkSuccess(currentList.length, currentList[1]);
-        
-        //unmark task that don't exist
-        commandBox.runCommand("unmark -10");
-        assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, UnmarkCommand.MESSAGE_USAGE));
-        commandBox.runCommand("unmark -1");
-        assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, UnmarkCommand.MESSAGE_USAGE));
         commandBox.runCommand("unmark " + (currentList.length + 1));
         assertResultMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
         commandBox.runCommand("unmark " + (currentList.length + 10));
         assertResultMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
+    }
+    
+    @Test
+    public void unmarkTask_nonEmptyList_unmarkedTaskResultMessage() {
+        TestTask[] currentList = td.getTypicalTasks();
+        commandBox.runCommand("list");
         
-        //unmark duplicate task
         commandBox.runCommand("unmark 1");
         assertResultMessage(UnmarkCommand.MESSAGE_UNMARKED_TASK);
         commandBox.runCommand("unmark " + currentList.length);
         assertResultMessage(UnmarkCommand.MESSAGE_UNMARKED_TASK);
-        
-        //invalid command
+    }
+    
+    @Test
+    public void unmarkTask_nonEmptyList_invalidCommandResultMessage() {
+        commandBox.runCommand("unmark -10");
+        assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, UnmarkCommand.MESSAGE_USAGE));
+        commandBox.runCommand("unmark -1");
+        assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, UnmarkCommand.MESSAGE_USAGE));
         commandBox.runCommand("unmarks 1");
         assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
         commandBox.runCommand("unmark index");
         assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, UnmarkCommand.MESSAGE_USAGE));
     }
-
-    private void assertUnmarkSuccess(int index, TestTask taskToUnmark) {
+    
+    @Test
+    public void unmarkTask_emptyList_invalidTaskIndexResultMessage() {
+        commandBox.runCommand("unmark 1");
+        assertResultMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
+    }
+    
+    private void assertUnmarkSuccess(int index, TestTask taskToUnmark, TestTask... currentList) {
         commandBox.runCommand("unmark " + index);
         taskToUnmark.setCompleted(false);
         
@@ -400,14 +540,33 @@ public class UnmarkCommandTest extends TaskListGuiTest {
     }
 
 ```
+###### \java\seedu\tasklist\testutil\TestTask.java
+``` java
+    public String getAddCommand() {
+        StringBuilder sb = new StringBuilder();
+        sb.append("add " + this.getTitle().fullTitle + " ");
+        if (!this.getDescription().description.isEmpty()) {
+            sb.append("d/" + this.getDescription().description + " ");
+        }
+        if (!this.getStartDateTime().isDateTimeEmpty()) {
+            sb.append("s/" + this.getStartDateTime().toString().replaceAll(":", "").replaceAll("-", "") + " ");
+        }
+        if (!this.getEndDateTime().isDateTimeEmpty()) {
+            sb.append("e/" + this.getEndDateTime().toString().replaceAll(":", "").replaceAll("-", "") + " ");
+        }
+        this.getTags().getInternalList().stream().forEach(s -> sb.append("t/" + s.tagName + " "));
+        return sb.toString();
+    }
+}
+```
 ###### \java\seedu\tasklist\testutil\TypicalTestTasks.java
 ``` java
 /**
- *
+ * Contains a list of tasks for testing
  */
 public class TypicalTestTasks {
 
-    public static TestTask task1, task2, task3, task4, task5, task6, task7, task8, task9;
+    public static TestTask task1, task2, task3, task4, task5, task6, task7, task8, task9, task10;
 
     public TypicalTestTasks() {
         try {
@@ -432,6 +591,9 @@ public class TypicalTestTasks {
                     .withEndDateTime("01102014").build();
             task9 = new TaskBuilder().withTitle("Hard Labor").withStartDateTime("07062001 2359")
                     .withDescription("need to get strong").withEndDateTime("03072015 0000").build();
+            
+            task10 = new TaskBuilder().withTitle("Order pizza").withStartDateTime("05112016 1030")
+                    .withDescription("need order two large pizza").withEndDateTime("05112016 1100").build();
             
         } catch (IllegalValueException e) {
             e.printStackTrace();
